<resources>
    <string name="app_name">RPG Assistant</string>
    <string name="gurps">GURPS</string>
    <string name="dice">Dice Emulator</string>
    <string name="soundboard">Soundboard</string>
    <string name="title_activity_gurps">GURPS</string>
    <string name="action_settings">Settings</string>
    <string name="stats">Character Stats</string>
    <string name="stp">ST+</string>
    <string name="stm">ST-</string>
    <string name="hpp">HP+</string>
    <string name="hpm">HP-</string>
    <string name="dxp">DX+</string>
    <string name="dxm">DX-</string>
    <string name="wip">WI+</string>
    <string name="wim">WI-</string>
    <string name="iqp">IQ+</string>
    <string name="iqm">IQ-</string>
    <string name="pep">PE+</string>
    <string name="pem">PE-</string>
    <string name="htp">HT+</string>
    <string name="htm">HT-</string>
    <string name="fpp">FP+</string>
    <string name="fpm">FP-</string>
    <string name="strengthStat">0</string>
    <string name="hitpointStat">0</string>
    <string name="dexterityStat">0</string>
    <string name="willpowerStat">0</string>
    <string name="iqStat">0</string>
    <string name="currenthpfp">Current</string>
    <string name="fpstat">0</string>
    <string name="htStat">0</string>
    <string name="perStat">0</string>
    <string name="title_activity_gurps_navigator">gurpsNavigator</string>
    <string name="character">Characters</string>
    <string name="monster">Monsters</string>
    <string name="gurpsnav">GURPS</string>
    <string name="loot">Loot</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="blank">0</string>
    <string name="statstitle">STATS</string>
    <string name="dungeon">Dungeon</string>
    <string name="randomMonster">Random</string>
    <string name="blankMonster">New</string>
    <string name="deleteall">Clear</string>
    <string name="charName">Name: </string>
    <string name="monstername">Name:</string>
    <string name="monsterlevel">Level:</string>
    <string name="title_activity_monster_stats">MonsterStats</string>
    <string name="monsterdescription">Description:</string>
    <string name="monstertheClass">Class:</string>
    <string name="monsterst">Strength:</string>
    <string name="monsterdx">Dexterity:</string>
    <string name="monsteriq">IQ:</string>
    <string name="monsterht">HT:</string>
    <string name="monsterdodge">Dodge:</string>
    <string name="monsterhp">HP:</string>
    <string name="monsterwill">Will:</string>
    <string name="monsterper">Per:</string>
    <string name="monsterfp">FP:</string>
    <string name="monsterparry">Parry:</string>
    <string name="monsterspeed">Speed:</string>
    <string name="monstermove">Move:</string>
    <string name="monstersm">SM:</string>
    <string name="monsterdr">DR:</string>
    <string name="monsterattacks">Attacks:</string>
    <string name="monstertraits">Traits:</string>
    <string name="monsterskills">Skills:</string>
    <string name="monsternotes">Notes:</string>
    <string name="update">Update</string>
    <string name="title_activity_adds">Adds</string>
    <string name="armor">Armor</string>
    <string name="weapon">Weapon</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="title_activity_edit_weapon">editWeapon</string>
    <string name="TechLevel">TechLevel</string>
    <string name="Class">Class</string>
    <string name="Type">Type</string>
    <string name="Cost">Cost</string>
    <string name="Weight">Weight</string>
    <string name="Modifier">Modifier</string>
    <string name="ST">ST</string>
    <string name="Legality">Legality</string>
    <string name="Damage">Damage</string>
    <string name="Reach">Reach</string>
    <string name="Parry">Parry</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Range">Range</string>
    <string name="RateOfFire">RateOfFire</string>
    <string name="Shots">Shots</string>
    <string name="Bulk">Bulk</string>
    <string name="Recoil">Recoil</string>
    <string name="title_activity_work">Work</string>
    <string name="title_activity_edit_armor">editArmor</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Location">Location</string>
    <string name="DR">DR</string>
    <string name="LC">LC</string>
    <string name="Notes">Notes</string>
</resources>
